Fixing banner overlap with logo

--- a/_sass/base/_page.scss
+++ b/_sass/base/_page.scss
@@ -117,3 +117,7 @@
 		margin-top: 5em;
 		margin-bottom: 0;
 	}
+
+	.finally {
+		background-color: #00a529;
+	}
